--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
-@media all and (min-width: 375px) {
+@media (max-width: 375px) {
+    .numbers {
+        flex-direction: column;
+    }
 
+    .bottom-half {
+        flex-direction: column;
+    }
 }
 
 body {
@@ -50,17 +56,94 @@ hr {border: 1px thin black; opacity: 0.4; margin: 0;}
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    color: hsl(225, 20%, 60%);
 }
 
 .numbers {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    font-weight: 600;
+}
+
+.dollars {
+    color: hsl(227, 35%, 25%);
+    font-size: 2rem;
 }
 
 .toggle {
     display: flex;
     justify-content: center;
-    gap: 4rem;
+    align-items: center ;
+    color: hsl(225, 20%, 60%);
+}
+
+.switch {                               /* the part around the slider button*/
+    position: relative;
+    display: inline-block;
+    width: 3.5rem;
+    height: 1.3rem;
+    vertical-align: middle;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0.6rem;
+    bottom: 0;
+    background-color: hsl(223, 50%, 87%);
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: '';
+    height: 1rem;
+    width: 1rem;
+    left: 0.2rem;
+    bottom: 0.1rem;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color:  hsl(174, 86%, 45%);
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px  hsl(174, 86%, 45%);
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(1.5rem);
+    -ms-transform: translateX(1.5rem);
+    transform: translateX(1.5rem);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round::before{
+    border-radius: 50%;
+}
+
+.discount {
+    color: hsl(15, 100%, 70%);
+    background-color: hsl(14, 92%, 95%);
+    border-radius: 20px;
+    font-size: 0.8em;
+    padding: 0em 1em ;
 }
 
 .bottom-half {
@@ -76,11 +159,18 @@ hr {border: 1px thin black; opacity: 0.4; margin: 0;}
     padding: 0;
 }
 
-.links > li{
+li{
     background-image: url(./images/icon-check.svg);
     background-repeat: no-repeat;
+    padding-left: 1.5em;
+    color: hsl(225, 20%, 60%)
 }
 
-button {
 
+button {
+    background-color: hsl(227, 35%, 25%);
+    color: hsl(226, 100%, 87%);
+    padding: 0.75rem 2.5rem;
+    border-radius: 30px;
+    border: none;
 }
