--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 @media (max-width: 375px) {
     .numbers {
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
     }
 
     .bottom-half {
@@ -66,9 +69,58 @@ hr {border: 1px thin black; opacity: 0.4; margin: 0;}
     font-weight: 600;
 }
 
+.pageviews, .dollars {                      /* Used these 3 selectors to align both of the text elements as the span by default has no padding or margin. Also because the span elements move the opposite text higher. */
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+}
+
 .dollars {
     color: hsl(227, 35%, 25%);
     font-size: 2rem;
+}
+
+.slide-container {
+    margin: auto;
+    width: 80%;
+}
+
+input[type=range] {
+    width: 100%;
+    -webkit-appearance: none;
+    background-color: hsl(224, 65%, 95%);
+    border-radius: 20px;
+    height: 0.5rem;
+}
+
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background: hsl(174, 77%, 80%);
+    cursor: pointer;
+    background-image: url(./images/icon-slider.svg);
+    background-repeat: no-repeat;       
+    background-position: center center;         /* image is always in the center of the button */
+    -webkit-transition: .2s;
+    transition: .2s;
+    box-shadow: 0 15px 15px 0px hsl(174, 77%, 80%);
+}
+
+input[type=range]::-moz-range-thumb {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background: hsl(174, 77%, 80%);
+    cursor: pointer;
+}
+
+input[type=range]::-webkit-slider-thumb:active {
+    background: hsl(174, 86%, 45%);
+    background-image: url(./images/icon-slider.svg);
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 .toggle {
@@ -78,7 +130,7 @@ hr {border: 1px thin black; opacity: 0.4; margin: 0;}
     color: hsl(225, 20%, 60%);
 }
 
-.switch {                               /* the part around the slider button*/
+.switch {                               /* the part around the toggle button*/
     position: relative;
     display: inline-block;
     width: 3.5rem;
@@ -93,21 +145,21 @@ hr {border: 1px thin black; opacity: 0.4; margin: 0;}
 }
 
 .slider {
-    position: absolute;
+    position: absolute;             /* to show the slider on the screen */
     cursor: pointer;
     top: 0;
     left: 0;
     right: 0.6rem;
     bottom: 0;
     background-color: hsl(223, 50%, 87%);
-    -webkit-transition: .4s;
+    -webkit-transition: .4s;        
     transition: .4s;
 }
 
 .slider:before {
-    position: absolute;
+    position: absolute;             /* To show toggle button on the screen */
     content: '';
-    height: 1rem;
+    height: 1rem;                   /* These next 4 styles were used to adjust the position of the toggle button inside the slider */
     width: 1rem;
     left: 0.2rem;
     bottom: 0.1rem;
@@ -154,18 +206,20 @@ input:checked + .slider:before {
 }
 
 .links {
-    list-style-type: none;
-    margin: 0;
+    list-style-type: none;    
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
 
 li{
     background-image: url(./images/icon-check.svg);
     background-repeat: no-repeat;
-    padding-left: 1.5em;
-    color: hsl(225, 20%, 60%)
+    background-position: left;
+    padding-left: 1.5rem;
+    color: hsl(225, 20%, 60%);
 }
-
 
 button {
     background-color: hsl(227, 35%, 25%);
